--- a/package.json
+++ b/package.json
@@ -2,9 +2,8 @@
   "name": "wetubesample",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "node index.js"
   },
   "repository": {
     "type": "git",
@@ -15,5 +14,8 @@
   "bugs": {
     "url": "https://github.com/aren0416/wetubesample/issues"
   },
-  "homepage": "https://github.com/aren0416/wetubesample#readme"
+  "homepage": "https://github.com/aren0416/wetubesample#readme",
+  "dependencies": {
+    "express": "^4.17.1"
+  }
 }
