--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "description": "",
   "scripts": {
-    "dev": "node index.js"
+    "dev": "babel-node index.js"
   },
   "repository": {
     "type": "git",
@@ -17,5 +17,10 @@
   "homepage": "https://github.com/aren0416/wetubesample#readme",
   "dependencies": {
     "express": "^4.17.1"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.14.2",
+    "@babel/node": "^7.14.2",
+    "@babel/preset-env": "^7.14.2"
   }
 }
